[package]
name = "rain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkg"
path = "src/pkg/mod.rs"

[dependencies]
keccak-hash = { version = "0.10.0" }
redb = { version = "1.0.2" }
tokio = { version = "1.29.0", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
axum = { version = "*" }
log = { version = "*" }
log4rs = "*"
clap = { version = "4.1.13", features = ["derive"] }
dotenv = "*"
config = "*"
urlencoding = "*"
chrono = { version = "*" }
lazy_static = { version = "*" }
ethereum-types = { version = "0.14.1" }
jsonrpc-core = { version = "18.0.0" }
hex = { version = "0.4.3" }
